fix more articles section, horizontal scroll, iframe size and link titles

--- a/assets/style.css
+++ b/assets/style.css
@@ -107,7 +107,7 @@ p {
 
 .postContent {
   display: grid;
-  grid-template-columns: 35% auto 35%;
+  grid-template-columns: 25% auto 25%;
 }
 
 .post-content-article {
@@ -138,11 +138,16 @@ p {
   margin-left: 5%;
 }
 
+.article-video {
+  display: flex;
+  flex-direction: column;
+}
+
 .article-video span {
   font-size: 0.9375rem;
   line-height: 1.25rem;
   color: #666;
-  margin-right: 7px;
+  margin-top: 5px;
 }
 
 .article-text-row-3 > p > span {
@@ -171,13 +176,19 @@ p {
 
 .more-articles a {
   text-decoration: none;
-  color: rgb(50, 104, 145);
+  color: black;
+}
+
+iframe {
+  width: 100%;
+  height: 400px;
 }
 
 #credit {
   font-size: 0.8125rem;
   line-height: 1.125rem;
   color: #888;
+  margin: 0;
 }
 
 .telescope img {
@@ -309,23 +320,45 @@ p {
   float: left;
   width: 31%;
   padding: 5px;
-  height: 400px;
+  height: 240px;
+  font-family: nyt-cheltenham, georgia, "times new roman", times, serif;
+}
+
+.more-articles-editors-pick {
+  margin-bottom: 3rem;
 }
 
 .more-articles-editors-pick div {
   float: left;
   width: 31%;
   padding: 5px;
-  height: 400px;
+  height: 240px;
+  font-family: nyt-cheltenham, georgia, "times new roman", times, serif;
+  text-align: justify;
+  font-size: 16px;
+  color: black;
 }
 
-.bottomBar-nav h5 {
+.more-articles-editors-pick > div > p {
+  font-size: 14px;
+  color: gray;
+  margin: 0;
+}
+
+.bottomBar-nav a {
   text-transform: uppercase;
 }
 
-.more-articles-floats > div > h5 {
+.more-articles-floats > div > a {
   text-align: justify;
   font-size: 16px;
+  color: black;
+}
+
+.more-articles-floats > div > p {
+  font-size: 14px;
+  color: gray;
+  margin: 0;
 }
 
 .more-articles-black-line {
